_sass/main.scss
// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "base",
        "mixins",
        "purchase";

$backgroundColor: #fffffe;
$bodyColor: #222;
$bodyFont: adobe-caslon-pro, serif;

body {
  background: $backgroundColor;
  color: $bodyColor;
  font-family: $bodyFont;
  font-weight: 500;
  font-style: normal;
  font-size: 1.2em;
  line-height: 1.5;

}
h1, h2, h3, h4, h5, h6, strong, b {
  font-weight: 500;
}


// -- temp styles -- //
body {
  text-align: center;
  padding: 0 25%;
  @include mq(small) {
    padding: 0 5%;
  }

}
.title {
  font-size: 1.1em;
  border: none;
  display: inline-block;
}
.title--logo {
  max-width: 225px;
  border: none;
  display: block;
  margin: 100px auto 75px;
}
h2 {
  border-top: 1px solid #ddd;
  padding-top: .5em;
  font-size: 2.5em;
  margin: 1em 0 1em;
  @include mq(small) {
    line-height: 1.2;
    font-size: 1.75em;
  }

}
p {
  margin: 0 0 .5em;
  word-spacing: -30%;
  strong {
    font-weight: 700;
  }
}

a {
  text-decoration: underline;
}
main img {
  display: block;
  margin: 75px 0;
}
footer {
  margin: 100px 0;
}

